# labs_inf

./: .gitignore  README.md
lab_1/: CMakeLists.txt
libs/sequences/: CMakeLists.txt  test_lists
libs/sequences/include/seq/: array_sequence.h
libs/sequences/src/: a.out  dynamic_array.h  linked_list.cpp  linked_list.h  main.cpp
libs/sequences/src/seq/: sequence.h
libs/sequences/test/: test_linked_list.cpp
